--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "build": "./node_modules/.bin/webpack",
-    "dev": "./node_modules/.bin/webpack -w",
+    "build": "webpack",
+    "dev": "webpack-dev-server --hot -w",
     "checkstyle": "./node_modules/.bin/prettier -c **/*{html,js,jsx}",
     "format": "./node_modules/.bin/prettier --write **/*{html,js,jsx}"
   },
