--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "prop-types": "15.7.2",
     "react": "16.12.0",
     "react-bootstrap": "1.0.0-beta.16",
+    "react-bootstrap-icons": "^1.0.3-alpha5",
     "react-dom": "16.12.0",
     "react-redux": "7.1.3",
     "redux": "4.0.4",
     "reselect": "4.0.0",
     "style-loader": "1.0.0",
     "webpack": "4.41.2",
-    "webpack-cli": "3.3.10"
+    "webpack-cli": "3.3.10",
+    "webpack-dev-server": "^3.11.0"
   }
 }
