--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.12.0",
     "react-bootstrap": "1.0.0-beta.16",
     "react-bootstrap-icons": "^1.0.3-alpha5",
+    "react-datepicker": "^3.1.3",
     "react-dom": "16.12.0",
     "react-redux": "7.1.3",
     "redux": "4.0.4",
